Add guest login feature to allow users to use app without authentication
- Add "Continue as Guest" button on login page
- Implement guest mode using SharedPreferences to track guest state
- Add guest mode support in authentication state checker
- Update home page to handle guest mode logout
- Add localized strings for "continueAsGuest" in all language files
- Guest users can access all app features without Firebase authentication
- Guest mode can be exited through settings menu

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -197,5 +197,6 @@
   "microphonePermissionDenied": "تم رفض إذن الميكروفون",
   "microphonePermissionDeniedMessage": "تم رفض إذن الميكروفون بشكل دائم. يرجى تمكين إذن الميكروفون في إعدادات النظام لاستخدام تدريب الصوت.",
   "microphoneError": "خطأ في الميكروفون",
-  "openSettings": "فتح الإعدادات"
+  "openSettings": "فتح الإعدادات",
+  "continueAsGuest": "المتابعة كضيف"
 }
