--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -408,5 +408,9 @@
   "openSettings": "Open Settings",
   "@openSettings": {
     "description": "Open settings button text"
+  },
+  "continueAsGuest": "Continue as Guest",
+  "@continueAsGuest": {
+    "description": "Guest login button text"
   }
 }
