--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -197,5 +197,6 @@
   "microphonePermissionDenied": "Разрешение микрофона отклонено",
   "microphonePermissionDeniedMessage": "Разрешение микрофона было отклонено навсегда. Пожалуйста, включите разрешение микрофона в настройках системы, чтобы использовать голосовую тренировку.",
   "microphoneError": "Ошибка микрофона",
-  "openSettings": "Открыть Настройки"
+  "openSettings": "Открыть Настройки",
+  "continueAsGuest": "Продолжить как гость"
 }
