--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -197,5 +197,6 @@
   "microphonePermissionDenied": "마이크 권한이 거부되었습니다",
   "microphonePermissionDeniedMessage": "마이크 권한이 영구적으로 거부되었습니다. 음성 훈련을 사용하려면 시스템 설정에서 마이크 권한을 활성화하세요.",
   "microphoneError": "마이크 오류",
-  "openSettings": "설정 열기"
+  "openSettings": "설정 열기",
+  "continueAsGuest": "게스트로 계속"
 }
