--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -198,5 +198,37 @@
   "microphonePermissionDeniedMessage": "마이크 권한이 영구적으로 거부되었습니다. 음성 훈련을 사용하려면 시스템 설정에서 마이크 권한을 활성화하세요.",
   "microphoneError": "마이크 오류",
   "openSettings": "설정 열기",
-  "continueAsGuest": "게스트로 계속"
+  "continueAsGuest": "게스트로 계속",
+  "movementTraining": "동작 훈련",
+  "@movementTraining": {
+    "description": "Movement training button title"
+  },
+  "movementTrainingInstruction": "양팔을 들어 올리고 올바른 자세를 유지하세요",
+  "@movementTrainingInstruction": {
+    "description": "Instruction text for movement training"
+  },
+  "armsRaised": "팔이 올라갔습니다",
+  "@armsRaised": {
+    "description": "Status when arms are raised"
+  },
+  "raiseArms": "팔을 들어 올려주세요",
+  "@raiseArms": {
+    "description": "Prompt to raise arms"
+  },
+  "lowerArms": "훌륭합니다! 이제 팔을 내려주세요",
+  "@lowerArms": {
+    "description": "Prompt to lower arms after raising"
+  },
+  "successCount": "성공 횟수",
+  "@successCount": {
+    "description": "Success count label"
+  },
+  "cameraPermissionRequired": "카메라 권한이 필요합니다",
+  "@cameraPermissionRequired": {
+    "description": "Camera permission required message"
+  },
+  "cameraPermissionDeniedMessage": "카메라 권한이 거부되었습니다. 동작 훈련을 사용하려면 시스템 설정에서 카메라 권한을 활성화하세요.",
+  "@cameraPermissionDeniedMessage": {
+    "description": "Camera permission denied message"
+  }
 }
